test/spec_vectors/select/fail/module_16.wat
(module (func $type-1st-operand-empty (select) (drop)))